[package]
name = "rack"
version = "0.1.0"
authors = ["David Brown <david.brown@linaro.org>"]
license = "MIT"
readme = "README.md"
keywords = ["system", "backup", "zfs"]
categories = ["filesystem", "command-line-utilities"]
description = "Utilities for various snapshot and cloning operations in ZFS"
repository = "https://github.com/d3zd3z/rack"
publish = false

[lib]
name = "rack"

[dependencies]
chrono = "0.4"
clap = "2.25"
clippy = {version = "0.0.146", optional = true}
regex = "0.2.2"
rsure = { path = "../../wd/rsure" }
error-chain = "0.10"

[features]
default = []

[[bin]]
name = "rack"
test = false
doc = false
