[package]
authors = ["David Brown <david.brown@linaro.org>"]
categories = [
    "filesystem",
    "command-line-utilities",
]
description = "Utilities for various snapshot and cloning operations in ZFS"
keywords = [
    "system",
    "backup",
    "zfs",
]
license = "MIT"
name = "rack"
publish = false
readme = "README.md"
repository = "https://github.com/d3zd3z/rack"
version = "0.1.0"

[[bin]]
doc = false
name = "rack"
test = false

[dependencies]
chrono = "0.4"
clap = "2.25"
error-chain = "0.11"
regex = "0.2.2"
structopt = "0.1"
structopt-derive = "0.1"

[dependencies.clippy]
optional = true
version = "0.0.146"

[dependencies.rsure]
path = "../../wd/rsure"

[features]
default = []

[lib]
name = "rack"
